--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,25 @@
 {
   "manifest_version": 3,
-  "name": "Text Scrap with Sidebar",
+  "name": "Primer Hackathon Extension",
   "version": "1.0",
-  "description": "Select text to show it in a sidebar.",
+  "description": "지원사업을 스크랩하세요.",
   "permissions": [
     "scripting",
     "activeTab",
     "contextMenus"
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "js/background.js"
   },
   "action": {
     "default_popup": "index.html",
-    "default_icon": "logo.png"
+    "default_icon": "images/logo.png"
   },
   "web_accessible_resources": [
     {
       "resources": [
         "sidebar.html",
-        "bootstrap.min.css"
+        "css/bootstrap.min.css"
       ],
       "matches": [
         "<all_urls>"
@@ -32,11 +32,12 @@
         "<all_urls>"
       ],
       "js": [
-        "contentScript.js"
+        "js/utils.js",
+        "js/contentScript.js"
       ],
       "css": [
-        "bootstrap.min.css",
-        "styles.css"
+        "css/bootstrap.min.css",
+        "css/sidebar.css"
       ]
     }
   ]
